# SCB_first_google

./: .gitignore  DEPLOY.md  README.md  deploy.sh
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run_eval.sh
backend/app/: api.py  config.py  data_loader.py  schemas.py
backend/app/agents/: adk_agents.py  triage.py
backend/app/data/: country_feed.json  generate_data.py  messages.json  sop.md
backend/app/eval/: score.py
backend/tests/: test_data_loader.py  test_triage.py
context/: BUILD-LOG.md  CONTEXT.md  RESUME-HERE.md  SUMMARY.md
docs/superpowers/plans/: 2026-06-17-beacon-crisis-triage.md
docs/superpowers/specs/: 2026-06-17-beacon-crisis-triage-design.md
frontend/: .dockerignore  .env.local.example  Dockerfile  cloudbuild.yaml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CaseDetail.tsx  QueueCard.tsx  Scoreboard.tsx  ui.tsx
frontend/lib/: api.ts  types.ts
