[project]
name = "beacon-backend"
version = "0.1.0"
description = "Beacon — Crisis Triage Agent Swarm (MFA SG, Card 01 The Crowded Hotline)"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=0.2.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-genai>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
